# hospital-management

hospital-management/: .gitignore  README.md
hospital-management/apps/api/: Dockerfile  alembic.ini  pyproject.toml
hospital-management/apps/api/alembic/: env.py
hospital-management/apps/api/alembic/versions/: 0001_create_patients_table.py  0002_create_users_table.py  0003_create_operations_tables.py  0004_create_audit_logs_table.py  0005_add_invoice_fields_to_medical_bills.py  0006_create_consultations_table.py  0007_add_prescription_fields_to_consultations.py  0008_roles_op_vitals.py  0009_add_patient_village_town.py  0010_create_lab_orders_table.py  0011_refactor_lab_orders_header_items.py  0012_add_lab_payment_fields.py  0013_add_op_consultation_fee_fields.py
hospital-management/apps/api/app/: main.py
hospital-management/apps/api/app/api/v1/: auth.py  health.py  laboratory.py  operations.py  reports.py
hospital-management/apps/api/app/core/: config.py  metrics.py  rate_limit.py  security.py
hospital-management/apps/api/app/models/: __init__.py  audit_log.py  consultation.py  expense.py  lab_order.py  medical_bill.py  op_visit.py  patient.py  user.py
hospital-management/apps/api/app/repositories/: user_repository.py
hospital-management/apps/api/app/schemas/: __init__.py  auth.py  laboratory.py  operations.py  reports.py
hospital-management/apps/api/app/services/: lab_catalog.py
hospital-management/apps/api/tests/: test_auth.py  test_health.py  test_operations.py  test_reports.py
hospital-management/scripts/: db-backup-loop.sh  db-backup-once.sh  (+4 more)
(+34 files in other folders)
